# wgpu-stretch

./: Cargo.toml  README.md  build.rs
src/: main.rs
src/shaders/: shader.frag  shader.vert  shader.vert.spv
