[package]
name = "wgpu-stretch"
version = "0.1.0"
authors = ["LoganDark <logandarklock@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "~0.24.0"
wgpu = "~0.6.2"
pollster = "~0.2.1"
bytemuck = "^1.5.0"

[build-dependencies]
glob = "~0.3.0"
shaderc = "~0.7.0"
thiserror = "^1.0.23"
